JKD16 空指针错误查看